# tflite_micro_compiler

./: .gitignore  .gitmodules  CMakeLists.txt  IFX_BUILD.sh  IFX_Makefile  IFX_RUN_ALL_TESTS.sh  Makefile  Model_source.txt  NEWS.txt  README.md  VerifiedTensorflowVersion.txt  cifar10.cc  cifar10_compiled.cc  cifar10_compiled_sizes.txt  cifar10_run_comp.cc  cifar10_sizes.txt  common.mk  compiled_hello.cpp  compiled_mobilnet.cpp  compiler.cc  compiler_config.h  fake_implementations.cpp  hello_world.cc  hello_world_5_compiled_sizes.txt  hello_world_5_sizes.txt  hello_world_compiled_sizes.txt  hello_world_sizes.txt  mobilenet_compiled_sizes.txt  mobilenet_sizes.txt  mobilenet_v1_0_25_160_quantized.c  mobilnet.cpp  sample_output.cpp  tflu_dump.cpp  truck.c  upstreams.txt
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  improvement.md
.github/workflows/: c-cpp.yml
cmake/: FindTFLite.cmake
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  argmax.tflite  cifar10.cc  cifar10.tflite  cifar10_compiled.cc  cifar10_compiled.cc.h  cifar10_model.c  cifar10_run_comp.cc  compiled_cifar10.cc  compiled_cifar10.cc.h  compiled_hello.cpp  compiled_hello.cpp.h  compiled_hello_world.cc  compiled_hello_world.cc.h  compiled_hello_world_5.cc  compiled_hello_world_5.cc.h  compiled_mobilenet.cc  compiled_mobilenet.cc.h  compiled_mobilenet.cpp  compiled_mobilenet.cpp.h  compiled_mobilnet.cpp  gnu.c  hello_world.cc  hello_world.tflite  hello_world2.cc  hello_world2_5.cc  hello_world2_sparse.cc  hello_world_5.cc  hello_world_5.tflite  hello_world_5_model.cc  hello_world_model.cc  hello_world_pruned_8.cc  hello_world_pruned_8.tflite  hello_world_sparse.cc  lstm2.py  lstm2.tflite  lstm_compiled.cc  (+7 more)
examples/custom/: .gitignore  Makefile  custom.tflite  custom_implementations.cpp  fake_implementations.cpp  registration.cpp
examples/generic_test/: CMakeLists.txt  generic_test.cpp
examples/reference/: compiled_cifar10.cc  compiled_cifar10.cc.h  compiled_hello_world.cc  compiled_hello_world.cc.h  compiled_hello_world_5.cc  compiled_hello_world_5.cc.h  compiled_hello_world_pruned_8.cc  compiled_hello_world_pruned_8.cc.h  compiled_mobilenet.cc  compiled_mobilenet.cc.h
ifx_tests/: IFX_TEST_010005_clean_all.sh  IFX_TEST_010010_compile_and_run_ref_examples.sh  IFX_TEST_010020_compile_and_gen_examples.sh  IFX_TEST_010030_compile_examples_riscv32.sh  IFX_TEST_010030_compile_examples_rival2_strm.sh  MANUAL_ONLY_TEST_compile_and_run_fpga.sh  gdb_startup_commands.gdb  minimumOCDS.cfg
patches/: tflite-micro-makefile.patch  tflite-micro.patch
src/: BuiltinAllocations.cc  BuiltinAllocations.h  CodeWriter.cc  CodeWriter.cpp  CodeWriter.h  Compiler.cc  Compiler.cpp  Compiler.h  CustomOperators.cc  CustomOperators.cpp  CustomOperators.h  Makefile.inc  MemMap.cc  MemMap.h  ModelInfo.h  Options.h  RecordAllocations.cc  RecordAllocations.cpp  RecordAllocations.h  TypeToString.cc  TypeToString.cpp  TypeToString.h  main.cc  main.cpp
tflite_u_preint/: static_data_utils.cc  static_data_utils.h  static_init_support.cc  static_init_support.h
